# arcore_jni

./: Cargo.toml  build.rs
include/: arcore_c_api.h
src/: augmented_face.rs  augmented_image.rs  background_renderer.rs  ffi.rs  jni_interface.rs  lib.rs  log.rs  plane_renderer.rs  point_cloud_renderer.rs  renderer_background.rs  renderer_plane.rs  renderer_point_cloud.rs  util.rs
