[package]
name = "arcore_jni"
version = "0.1.0"
build = "build.rs"
authors = ["yangchengjian"]

[build-dependencies]
bindgen = "0.26.3"
cc = "1.0"

[dependencies]
android_injected_glue = "0.2"
libc = "0.2"
gleam = "0.5"
serde = "1.0"
lodepng = "2.0.0"
rgb = "0.8"
glm = {git = "https://github.com/dche/glm-rs.git", branch = "master"}

jni = { version = "0.5", default-features = false }