[package]
name = "arcore_rs"
version = "0.1.0"
build = "build.rs"
authors = ["yangchengjian"]

[build-dependencies]
bindgen = "0.51.1"

[dependencies]
android_injected_glue = "0.2"
libc = "0.2"
nalgebra-glm = "0.3"
ndk-sys = {git = "https://github.com/rust-windowing/android-ndk-rs.git", branch = "master", features = ["bitmap", "media"]}
sparkle = "0.1.16"
serde = "1.0"
lodepng = "2.5.0"
rgb = "0.8"
glm = {git = "https://github.com/dche/glm-rs.git", branch = "master"}